# mapgame

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config.default.json
.cargo/: config.toml
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  publish-linux.yml  publish.yml  push.yml
maps/earth/: nations.geojson  provinces.json
maps/earth/provinces/: AFG.geojson  CHN.geojson  RUS.geojson
src/: config.rs  errors.rs  game.rs  geo_drawable.rs  main.rs  math.rs  nation.rs  player.rs  province.rs  util.rs  world_map.rs  worldmap.rs
src/nation/: load.rs  mod.rs  render.rs  types.rs
src/world_map/: game.rs  load.rs  mod.rs  render.rs  types.rs
