[package]
name = "mapgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
geojson = "0.24.1"
gpkg = "0.1.0"
reqwest = "0.11.18"
sfml = "0.20.0"
tokio = { version = "1.28.1", features = ["full"] }
